--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -9,7 +9,7 @@ output:
 ## Loading and preprocessing the data
 
 
-```{r setup, include=FALSE}
+```{r setup}
 library(ggplot2)
 knitr::opts_chunk$set(echo = TRUE)
 monitoringData<-read.csv(unz("activity.zip", "activity.csv"),col.names = c("steps","date","interval"),na.strings = NA)
@@ -18,14 +18,12 @@ aggregateStepsByDay<-aggregate(steps ~ date, monitoringData, sum)
 aggregateStepsByDayAndInterval<-aggregate(steps ~  interval, monitoringData, mean)
 ```
 ```{r}
- png(file="./instructions_fig/Histogram_of_steps_each_day.png",height=480,width = 480)
- fig1<-hist(aggregateStepsByDay$steps,
+
+hist(aggregateStepsByDay$steps,
         xlab = "Steps",
         col="red",
         main = "Steps per day"
    )
-print(fig1)
-dev.off()
 
 meanSteps<-mean(aggregateStepsByDay$steps)
 medianSteps<-median(aggregateStepsByDay$steps)
@@ -36,8 +34,8 @@ print(paste("Median of Steps per day:",medianSteps))
 
 
 ## What is the average daily activity pattern?
-png(file="./instructions_fig/Time_series_average_steps_taken.png",height=480,width = 480)
-fig2<-plot( aggregateStepsByDayAndInterval$interval,
+
+plot( aggregateStepsByDayAndInterval$interval,
          aggregateStepsByDayAndInterval$steps,
           ylab = "Steps",
           type = "l",
@@ -45,8 +43,7 @@ fig2<-plot( aggregateStepsByDayAndInterval$interval,
           main = "Average Daily Activity Pattern",
          col="darkred"
     )
-print(fig2)
-dev.off()
+
 aggregateStepsByDayAndInterval[which.max(aggregateStepsByDayAndInterval$steps),]
 
 nrow(monitoringData[is.na(monitoringData$steps),])
@@ -60,14 +57,13 @@ nrow(monitoringDataNoNAs[is.na(monitoringDataNoNAs$steps),])
 
 noNAaggregageStepsByDay<-aggregate(steps ~ date, monitoringDataNoNAs, sum)
 
- png(file="./instructions_fig/Histogram_of_steps_each_day_after_imputing.png",height=480,width = 480)
- fig3<-hist(noNAaggregageStepsByDay$steps,
+
+ hist(noNAaggregageStepsByDay$steps,
         xlab = "Steps",
         col="blue",
         main = "Steps per day no NA's"
    )
- print(fig3)
-dev.off()
+
 noNAmeanSteps<-mean(noNAaggregageStepsByDay$steps)
 noNAmedianSteps<-median(noNAaggregageStepsByDay$steps)
 print(paste("Mean of Steps per day:",noNAmeanSteps))
@@ -85,13 +81,12 @@ names(Weektype)<-"Weektype"
 newNoNaDataSet<-cbind(monitoringDataNoNAs,Weektype)
 
 stepsByDayType<-aggregate(steps ~ interval + Weektype, newNoNaDataSet, mean)
- png(file="./instructions_fig/Panel_plot_compare_average_steps_per_5-minute_interval_across_weekdays_and_weekends.png",height=480,width = 480)
- g<-ggplot(stepsByDayType, aes(interval,steps, color = Weektype)) +
+
+ggplot(stepsByDayType, aes(interval,steps, color = Weektype)) +
         geom_path() +  
         facet_grid(. ~ Weektype ) +
         labs(x="Interval", y="Steps", title="Avgerage Daily Steps by Weektype")
    
-    print(g)
-dev.off()
-    
+## yes even though there is a higher peak of activity  during weekday the overall activity on weekend
+## is more than the weekday.
 ```
